fix: fix paddingX on mobile (2% -> 1rem).

--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -70,8 +70,8 @@
 
 @media (max-width: 700px) {
     .padding_normal {
-        padding-left: 2%;
-        padding-right: 2%;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
     .header {
         &__title  {
